--- a/program.html
+++ b/program.html
@@ -14,6 +14,7 @@
             <li><button id="btnRect">Rectangle</button></li>
             <li><button id="btnLine">Line</button></li>
             <li><button id="btnCircle">Circle</button></li>
+            <li><button id="btnTriangle">Triangle</button></li>      <!-- LAB: Can you figure out how to draw a triangle? -->
             <li><button id="btnPath">Path</button></li>
             <li id="trackX"></li>
             <li id="trackY"></li>
