Added the color picker

--- a/program.html
+++ b/program.html
@@ -16,6 +16,14 @@
             <li><button id="btnCircle">Circle</button></li>
             <li><button id="btnTriangle">Triangle</button></li>      <!-- LAB: Can you figure out how to draw a triangle? -->
             <li><button id="btnPath">Path</button></li>
+            <li>
+                <label for="favSColor">Select your favorite stroke color:</label>
+                <input type="color" id="favSColor" value="#ff0000"><br><br>
+            </li>
+            <li>
+              <label for="favFColor">Select your favorite fill color:</label>
+              <input type="color" id="favFColor" value="#ff0000"><br><br>
+            </li>
             <li id="trackX"></li>
             <li id="trackY"></li>
           </ul>
