--- a/program.html
+++ b/program.html
@@ -30,6 +30,6 @@
         </nav>
         <main></main>
       </div>
-      <script src="src/js/main.js"></script>
+      <script src="./dist/js/main.js"></script>
     </body>
 </html>
